Added Contracts page.

--- a/app/header.tmpl.html
+++ b/app/header.tmpl.html
@@ -9,16 +9,17 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<a class="navbar-brand" href="#">GrainTracker</a>
+	<a class="navbar-brand" href="/">GrainTracker</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarContent">
     <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" href="insert.php">INSERT</a></li>
-        <li class="nav-item"><a class="nav-link" href="select.php">SELECT</a></li>
-        <li class="nav-item"><a class="nav-link" href="update.php">UPDATE</a></li>
-        <li class="nav-item"><a class="nav-link" href="delete.php">DELETE</a></li>
+      <li class="nav-item"><a class="nav-link" href="../app/contracts.php">Contracts</a></li>
+        <!-- <li class="nav-item"><a class="nav-link" href="app/insert.php">INSERT</a></li>
+        <li class="nav-item"><a class="nav-link" href="app/select.php">SELECT</a></li>
+        <li class="nav-item"><a class="nav-link" href="app/update.php">UPDATE</a></li>
+        <li class="nav-item"><a class="nav-link" href="app/delete.php">DELETE</a></li> -->
     </ul>
   </div>
 </nav>
